Atualizando security config